cli/tests/testdata/check/no_error_truncation/main.out
error: TS2322 [ERROR]: Type '{ propertyWithAnExceedinglyLongName1: string; propertyWithAnExceedinglyLongName2: string; propertyWithAnExceedinglyLongName3: string; propertyWithAnExceedinglyLongName4: string; propertyWithAnExceedinglyLongName5: string; propertyWithAnExceedinglyLongName6: string; propertyWithAnExceedinglyLongName7: string; propertyWithAnExceedinglyLongName8: string; }' is not assignable to type 'string'.
var s: string = x;
    ^
    at file:///[WILDCARD]/no_error_truncation/main.ts:12:5

TS2454 [ERROR]: Variable 'x' is used before being assigned.
var s: string = x;
                ^
    at file:///[WILDCARD]/no_error_truncation/main.ts:12:17

Found 2 errors.
